添加物体object的结构，和渲染物体的函数

--- a/simple3d-master/simple3d-master/simple3d-master.vcxproj
+++ b/simple3d-master/simple3d-master/simple3d-master.vcxproj
@@ -125,6 +125,7 @@
     <ClCompile Include="BasicMath.cpp" />
     <ClCompile Include="Device.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="WireCube.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="BasicMath.h" />
