--- a/simple3d-master/simple3d-master/simple3d-master.vcxproj.filters
+++ b/simple3d-master/simple3d-master/simple3d-master.vcxproj.filters
@@ -13,6 +13,9 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="源文件\Sample">
+      <UniqueIdentifier>{f85ee841-c12b-4bd6-9fe8-e36eee3d83b0}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -23,6 +26,9 @@
     </ClCompile>
     <ClCompile Include="BasicMath.cpp">
       <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="WireCube.cpp">
+      <Filter>源文件\Sample</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
