--- a/simple3d-master/simple3d-master/simple3d-master.vcxproj
+++ b/simple3d-master/simple3d-master/simple3d-master.vcxproj
@@ -124,7 +124,7 @@
   <ItemGroup>
     <ClCompile Include="BasicMath.cpp" />
     <ClCompile Include="Device.cpp" />
-    <ClCompile Include="main.cpp" />
+    <ClCompile Include="WirePoly.cpp" />
     <ClCompile Include="WireCube.cpp" />
   </ItemGroup>
   <ItemGroup>
