--- a/simple3d-master/simple3d-master/simple3d-master.vcxproj.filters
+++ b/simple3d-master/simple3d-master/simple3d-master.vcxproj.filters
@@ -18,9 +18,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="Device.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
@@ -28,6 +25,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="WireCube.cpp">
+      <Filter>源文件\Sample</Filter>
+    </ClCompile>
+    <ClCompile Include="WirePoly.cpp">
       <Filter>源文件\Sample</Filter>
     </ClCompile>
   </ItemGroup>
