--- a/simple3d-master/simple3d-master/simple3d-master.vcxproj
+++ b/simple3d-master/simple3d-master/simple3d-master.vcxproj
@@ -124,6 +124,8 @@
   <ItemGroup>
     <ClCompile Include="BasicMath.cpp" />
     <ClCompile Include="Device.cpp" />
+    <ClCompile Include="SolidCube.cpp" />
+    <ClCompile Include="SolidCube_flat.cpp" />
     <ClCompile Include="WirePoly.cpp" />
     <ClCompile Include="WireCube.cpp" />
   </ItemGroup>
