--- a/simple3d-master/simple3d-master/simple3d-master.vcxproj.filters
+++ b/simple3d-master/simple3d-master/simple3d-master.vcxproj.filters
@@ -30,6 +30,12 @@
     <ClCompile Include="WirePoly.cpp">
       <Filter>源文件\Sample</Filter>
     </ClCompile>
+    <ClCompile Include="SolidCube.cpp">
+      <Filter>源文件\Sample</Filter>
+    </ClCompile>
+    <ClCompile Include="SolidCube_flat.cpp">
+      <Filter>源文件\Sample</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Device.h">
